--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,11 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.18.0"
   },
   "devDependencies": {
     "concurrently": "^9.2.0",
