--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,11 @@
     "@prisma/client": "^6.12.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.18.0"
+    "mongodb": "^6.18.0",
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
     "concurrently": "^9.2.0",
